Add forum channel as a setting.